# Varkor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md  style.md  todo
ext/: CMakeLists.txt
ext/lib/: assimp-vc142-mt.lib  assimp-vc142-mtd.lib  assimp_msvc2019_md_32.lib  assimp_msvc2019_md_64.lib  assimp_msvc2019_mdd_32.lib  assimp_msvc2019_mdd_64.lib  glfw3.lib  glfw3_msvc2019_md.lib  glfw3_msvc2019_md_32.lib  glfw3_msvc2019_md_64.lib  glfw3_msvc2019_md_d_32.lib  glfw3_msvc2019_md_d_64.lib  readme.md
ext/local/: readme.md
ext/local/GLFW/: VarkorGlfw.h
ext/local/assimp/: config.h
ext/local/glad/: glad.h
ext/local/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  readme.md
ext/src/: glad.c
src/: AssetLibrary.cc  AssetLibrary.h  AssetLibrary.hh  CMakeLists.txt  Camera.cc  Camera.h  Editor.cc  Editor.h  Error.cc  Error.h  Framer.cc  Framer.h  Input.cc  Input.h  Log.cc  Log.h  Main.cc  Options.cc  Options.h  Profiler.cc  Profiler.h  Registrar.cc  Registrar.h  Result.cc  Result.h  Shader.cc  Shader.h  Temporal.cc  Temporal.h  Texture.cc  Texture.h  VarkorMain.cc  VarkorMain.h  Viewport.cc  Viewport.h  camera.cc  camera.h  error.cc  error.h  framer.cc  (+11 more)
src/comp/: AlphaColor.cc  AlphaColor.h  BoxCollider.cc  BoxCollider.h  CMakeLists.txt  Camera.cc  Camera.h  CameraOrbiter.cc  CameraOrbiter.h  DefaultPostProcess.cc  DefaultPostProcess.h  DirectionalLight.cc  DirectionalLight.h  ExposurePostProcess.cc  ExposurePostProcess.h  LineMesh.cc  LineMesh.h  Mesh.cc  Mesh.h  Model.cc  Model.h  Name.cc  Name.h  PointLight.cc  PointLight.h  Registrar.cc  Registrar.h  Relationship.cc  Relationship.h  ShadowMap.cc  ShadowMap.h  Skybox.cc  Skybox.h  SpotLight.cc  SpotLight.h  Sprite.cc  Sprite.h  Text.cc  Text.h  Transform.cc  (+4 more)
src/core/: CMakeLists.txt  ComponentTable.cc  ComponentTable.h  CoreTypes.h  Object.cc  Object.h  Object.hh  ObjectSpace.cc  ObjectSpace.h  ObjectSpace.hh  Space.cc  Space.h  Space.hh  Table.cc  Table.h  Table.hh  Types.cc  Types.h  Types.hh  World.cc  World.h  World.hh
src/dbg/: redef_new.h
src/debug/: CMakeLists.txt  Draw.cc  Draw.h  MemLeak.cc  MemLeak.h  RedefNew.h  draw.cc  draw.h  mem_leak.h
src/ds/: CMakeLists.txt  Hash.cc  Hash.h  HashMap.h  HashMap.hh  HashSet.h  HashSet.hh  KvPair.h  KvPair.hh  List.h  List.hh  Map.h  Map.hh  Pool.h  Pool.hh  RBTree.h  RBTree.hh  RbTree.h  RbTree.hh  SparseSet.cc  SparseSet.h  Vector.h  Vector.hh  vector.hh
src/editor/: Asset.cc  Asset.h  AssetInterface.cc  AssetInterface.h  AssetInterfaces.cc  AssetInterfaces.h  AssetInterfaces.hh  CMakeLists.txt  Camera.cc  Camera.h  CoreInterface.cc  CoreInterface.h  Editor.cc  Editor.h  ErrorInterface.cc  ErrorInterface.h  FileInterface.cc  FileInterface.h  FramerInterface.cc  FramerInterface.h  HookInterface.cc  HookInterface.h  HookInterface.hh  InspectorInterface.cc  InspectorInterface.h  Interface.cc  Interface.h  Interface.hh  LayerInterface.cc  LayerInterface.h  LibraryInterface.cc  LibraryInterface.h  LogInterface.cc  LogInterface.h  OverviewInterface.cc  OverviewInterface.h  Primary.cc  Primary.h  Primary.hh  ResourceInterface.cc  (+9 more)
src/editor/gizmos/: CMakeLists.txt  Gizmos.cc  Gizmos.h  Rotator.cc  Rotator.h  Scalor.cc  Scalor.h  Translator.cc  Translator.h
src/editor/hook/: CMakeLists.txt  Hook.cc  Hook.h  Hook.hh  Model.cc  Model.h  Sprite.cc  Sprite.h  Text.cc  Text.h  Transform.cc  Transform.h
src/ext/: Tracy.h  glfw.h
src/gfx/: CMakeLists.txt  Cubemap.cc  Cubemap.h  Font.cc  Font.h  Framebuffer.cc  Framebuffer.h  GlError.cc  GlError.h  HdrColor.cc  HdrColor.h  Image.cc  Image.h  LineModel.cc  LineModel.h  Material.cc  Material.h  Mesh.cc  Mesh.h  Model.cc  Model.h  Renderable.cc  Renderable.h  Renderer.cc  Renderer.h  Shader.cc  Shader.h  Texture.cc  Texture.h  UniformVector.cc  UniformVector.h  UniformVector.hh
src/lang/: CMakeLists.txt  Tokenizer.cc  Tokenizer.h  Writer.cc  Writer.h
src/math/: Box.cc  Box.h  CMakeLists.txt  Capsule.h  Complex.h  Complex.hh  Constants.h  Geometry.cc  Geometry.h  Hull.cc  Hull.h  Intersection.cc  Intersection.h  Matrix.h  Matrix.hh  Matrix3.cc  Matrix3.h  Matrix4.cc  Matrix4.h  Plane.cc  Plane.h  Print.cc  Print.h  Quaternion.cc  Quaternion.h  Ray.cc  Ray.h  Sphere.cc  Sphere.h  Triangle.cc  Triangle.h  Utility.cc  Utility.h  Utility.hh  Vector.h  Vector.hh  complex.hh  matrix.hh  matrix.hpp  matrix_4.cc  (+3 more)
src/rsl/: Asset.cc  Asset.h  Asset.hh  CMakeLists.txt  Library.cc  Library.h  Library.hh  ResourceId.cc  ResourceId.h  ResourceType.cc  ResourceType.h
src/test/: CMakeLists.txt  Test.h  Viewer.cc  ds_vector.cc  math_complex.cc  math_matrix.cc  math_matrix_4.cc  math_quaternion.cc  math_vector.cc  readme.md
src/test/core/: ComponentTable.cc  ObjectSpace.cc  Print.cc  Print.h  Space.cc  Table.cc
src/test/ds/: HashMap.cc  HashSet.cc  List.cc  Map.cc  Pool.cc  Print.h  Print.hh  RbTree.cc  Test.h  TestType.cc  TestType.h  Vector.cc
src/test/gfx/: Shader.cc
src/test/lang/: Tokenizer.cc  Writer.cc
src/test/math/: Box.cc  Box.h  Complex.cc  Geometry.cc  Geometry.h  Hull.cc  Hull.h  Intersection.cc  Intersection.h  Matrix.cc  Matrix3.cc  Matrix4.cc  Plane.cc  Quaternion.cc  Ray.cc  Triangle.cc  Triangle.h  Vector.cc
src/test/perf/: Helper.cc  Helper.h  Space.cc
src/test/util/: Delegate.cc
src/test/vlk/: Explorer.cc  Extensions.cc  Pair.cc  Tokenizer.cc  Util.h  Value.cc  Writer.cc
src/test/world/: Print.cc  Print.h  Space.cc  Table.cc  (+1 more)
src/util/: CMakeLists.txt  Delegate.cc  Delegate.h  Memory.h  Memory.hh  Utility.h
src/vlk/: CMakeLists.txt  Explorer.cc  Explorer.h  Extensions.cc  Extensions.h  Pair.cc  Pair.h  Parser.cc  Parser.h  Tokenizer.cc  Tokenizer.h  Valkor.h  Value.cc  Value.h  Writer.cc  Writer.h
src/world/: CMakeLists.txt  ComponentType.cc  ComponentType.h  ComponentType.hh  Object.cc  Object.h  Object.hh  Registrar.cc  Registrar.h  Space.cc  Space.h  Space.hh  Table.cc  Table.h  Table.hh  Types.cc  Types.h  World.cc  World.h  World.hh
(+193 files in other folders)
