target_sources(varkor PRIVATE
  Camera.cc
  CoreInterface.cc
  Editor.cc
  ErrorInterface.cc
  FileInterface.cc
  FramerInterface.cc
  InspectorInterface.cc
  Interface.cc
  LayerInterface.cc
  LibraryInterface.cc
  ResourceInterface.cc
  TempInterface.cc
  Utility.cc
  WindowInterface.cc)
add_subdirectory(gizmos)
