add_custom_target(tests)

function(AddTest target)
  add_executable(${target})
  target_sources(${target} PRIVATE ${ARGN})
  target_include_directories(${target} PRIVATE "../" "../../ext/local")
  target_link_libraries(${target} varkorLibrary ${glfw} ${OPENGL_gl_LIBRARY})
  set_property(TARGET ${target} PROPERTY RUNTIME_OUTPUT_DIRECTORY
    "${CMAKE_SOURCE_DIR}/working/test")
  add_dependencies(tests ${target})

  if("${testNames}" STREQUAL "")
    set(testNames "${target}" PARENT_SCOPE)
  else()
    set(testNames "${testNames}\n${target}" PARENT_SCOPE)
  endif()
endfunction()

Addtest(ds_Map ds/Map.cc ds/TestType.cc)
Addtest(ds_RbTree ds/RbTree.cc ds/TestType.cc)
AddTest(ds_Vector ds/Vector.cc ds/TestType.cc)
AddTest(gfx_Shader gfx/Shader.cc)
AddTest(math_Complex math/Complex.cc)
AddTest(math_Geometry math/Geometry.cc)
AddTest(math_Matrix math/Matrix.cc)
AddTest(math_Matrix4 math/Matrix4.cc)
AddTest(math_Quaternion math/Quaternion.cc)
AddTest(math_Vector math/Vector.cc)
AddTest(util_Delegate util/Delegate.cc)
AddTest(vlk_Tokenizer vlk/Tokenizer.cc)
AddTest(vlk_Writer vlk/Writer.cc)
AddTest(world_Space world/Space.cc)
AddTest(world_Table world/Table.cc)

set(testNames "${testNames}" PARENT_SCOPE)
