add_custom_target(tests)

function(AddTest target)
  add_executable(${target})
  add_dependencies(tests ${target})
  target_sources(${target} PRIVATE ${ARGN})
  target_include_directories(${target} PRIVATE "../" "../../ext/local")
  target_link_libraries(${target} varkor ${glfw} ${OPENGL_gl_LIBRARY})
endfunction()

Addtest(ds_List ds/List.cc ds/TestType.cc)
Addtest(ds_Map ds/Map.cc ds/TestType.cc)
Addtest(ds_RbTree ds/RbTree.cc ds/TestType.cc)
AddTest(ds_Vector ds/Vector.cc ds/TestType.cc)
AddTest(gfx_Shader gfx/Shader.cc)
AddTest(math_Complex math/Complex.cc)
AddTest(math_Geometry math/Geometry.cc)
AddTest(math_Matrix math/Matrix.cc)
AddTest(math_Matrix4 math/Matrix4.cc)
AddTest(math_Quaternion math/Quaternion.cc)
AddTest(math_Vector math/Vector.cc)
AddTest(util_Delegate util/Delegate.cc)
AddTest(vlk_Explorer vlk/Explorer.cc)
AddTest(vlk_Extensions vlk/Extensions.cc)
AddTest(vlk_Value vlk/Value.cc)
AddTest(vlk_Tokenizer vlk/Tokenizer.cc)
AddTest(world_Space world/Space.cc)
AddTest(world_Table world/Table.cc)
